# bottom_rs_lib_dart

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  cbindgen.toml  pubspec.yaml
lib/: bottom_rs_dart.dart  helper.dart
native/bottom-rs-lib/: Cargo.toml  README.md
native/bottom-rs-lib-ffi/: Cargo.toml
native/bottom-rs-lib-ffi/src/: lib.rs  qffi.rs
test/: bottom_rs_dart_test.dart
